@@ -16,8 +16,8 @@
   <url>https://gitlab.stud.idi.ntnu.no/it1901/groups-2023/gr2315/gr2315</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>16</maven.compiler.source>
+    <maven.compiler.target>16</maven.compiler.target>
   </properties>
 
 
@@ -28,9 +28,9 @@
       <version>4.13</version>
     </dependency>
     <dependency>
-      <groupId>com.googlecode.json-simple</groupId>  
-      <artifactId>json-simple</artifactId>  
-      <version>1.1</version>  
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1</version>
     </dependency>
   </dependencies>
 
@@ -69,7 +69,12 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>3.0.0-M7</version> <!-- pick your own version -->
+          <configuration>
+            <forkCount>1</forkCount>
+            <argLine>--add-modules=jdk.incubator.vector</argLine>
+            <skipTests>true</skipTests>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
@@ -138,7 +143,7 @@
   </reporting>
 
   <modules>
-    <module>bankapp-core</module>
-    <module>bankapp-fxui</module>
+    <module>core</module>
+    <module>fxui</module>
   </modules>
 </project>
